redis Boot script && redis config file

--- a/ZsTechnology/Skill/Linux/ubuntu/redis/redis.conf
+++ b/ZsTechnology/Skill/Linux/ubuntu/redis/redis.conf
@@ -102,6 +102,7 @@ loglevel notice
 # Specify the log file name. Also the empty string can be used to force
 # Redis to log on the standard output. Note that if you use standard
 # output for logging but daemonize, logs will be sent to /dev/null
+# 修改生成默认日志文件位置
 logfile "/tmp/redis.log"
 
 # To enable logging to the system logger, just set 'syslog-enabled' to yes,
@@ -186,7 +187,9 @@ dbfilename dump.rdb
 # The Append Only File will also be created inside this directory.
 #
 # Note that you must specify a directory here, not a file name.
-dir ./
+#配置持久化文件存放位置
+#dir ./
+dir /data/redis/
 
 ################################# REPLICATION #################################
 
